--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+      <!-- android:networkSecurityConfig="@xml/network_security_config" -->
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -9,7 +10,6 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
-      android:networkSecurityConfig="@xml/network_security_config"
       android:usesCleartextTraffic="true">
       <activity
         android:name=".MainActivity"
