--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -2,12 +2,12 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-      <!-- android:networkSecurityConfig="@xml/network_security_config" -->
+    <!-- android:roundIcon="@mipmap/ic_launcher_round" -->
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
-      android:icon="@mipmap/ic_launcher"
-      android:roundIcon="@mipmap/ic_launcher_round"
+      android:icon="@mipmap/ic_qc"
+      
       android:allowBackup="false"
       android:theme="@style/AppTheme"
       android:usesCleartextTraffic="true">
