--- a/management1/package.json
+++ b/management1/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.73.6",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
