--- a/client/android/app/build.gradle
+++ b/client/android/app/build.gradle
@@ -121,13 +121,14 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
 
-    implementation("com.amap.api:navi-3dmap-location-search:10.0.700_3dmap10.0.700_loc6.4.5_sea9.7.2")
-
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
         implementation jscFlavor
     }
+    api 'com.alipay.sdk:alipaysdk-android:+@aar'
+    api 'com.android.support:support-v4:28.0.0'
+    api "com.android.support:appcompat-v7:28.0.0"
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
