--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "^2.16.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.15.4",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.10.1",
