--- a/delivery/package.json
+++ b/delivery/package.json
@@ -1,32 +1,50 @@
 {
   "name": "delivery",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "release": "cd android && ./gradlew assembleRelease && cd ..",
+    "clean": "cd android && ./gradlew clean && cd .."
   },
   "dependencies": {
+    "@react-native-community/segmented-control": "^2.2.2",
+    "@react-native-community/slider": "^4.5.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.20",
+    "axios": "^1.6.8",
     "react": "18.2.0",
-    "react-native": "0.74.2"
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.15.4",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.8.1",
+    "react-native-safe-area-context": "^4.10.4",
+    "react-native-screens": "^3.30.1",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
-    "@react-native/typescript-config": "0.74.84",
+    "@react-native/babel-preset": "0.73.21",
+    "@react-native/eslint-config": "0.73.2",
+    "@react-native/metro-config": "0.73.5",
+    "@react-native/typescript-config": "0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.2.5",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
